[tool.poetry]
name = "rasta"
version = "0.0.1"
description = "A library to download images from Open-Images, COCO, ImageNet, etc."
authors = ["Somraj Saha"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
